--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <h1><img align="center" height="50" src="{{ "/assets/na-mic-logo.png" | relative_url}}"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      <h1><img align="center" height="60" style="margin:0px 20px 0px 0px" src="{{ "/assets/na-mic-logo.png" | relative_url}}"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       {% endif %}
 
       {{ content }}
