PW39: Ensure front-matter values are escaped when needed
The purpose of this commit are:

* revisits the generation of the project README to ensure the YAML
  values associated with the front-matter section are properly escaped.

* speed-up GitHub workflow by avoiding having to download the docker image
  associated with the GitHub Action "cuchi/jinja2-action"

* streamline debugging by outputting the content of "template-data.json"

* remove need for generating the "template-data.json" file in the current
  directory. Since no docker image is used for rendering the template, it
  can be used from the runner temp directory.


It is a follow-up of 66e3d34f (BUG: Remove ':' in project title)

To ensure the values are escaped, the jinja2 package is directly used. This
provides more flexibility as it allows to leverage the "to_yaml" and
"regex_replace" filters provided by the "jinja2-ansible-filters" package.

Note that since to_yaml is originally intended to output a complete
document, we need to make sure to strip "\n" or "\n...\n" from the
text as these do not make ensure in the context of a single YAML value.

For references related to the "...", see these links:
* https://stackoverflow.com/questions/56950391/yaml-end-always-dumped-even-if-yaml-explicit-end-false
* https://stackoverflow.com/questions/66542271/what-does-three-dots-in-a-yaml-yml-mean/66542407#66542407
* https://github.com/yaml/pyyaml/issues/379
* https://github.com/ansible/ansible/issues/17095

--- a/PW39_2023_Montreal/Projects/Template/README.md.j2
+++ b/PW39_2023_Montreal/Projects/Template/README.md.j2
@@ -1,16 +1,16 @@
 ---
 layout: pw39-project
 
-project_title: {{ title }}
-category: {{ category }}
+project_title: {{ title | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
+category: {{ category | regex_replace("\n$|\n\.\.\.\n$", "") }}
 
 key_investigators:
 {% for investigator in investigators %}
-- firstname: {{ investigator.firstname }}
-  lastname: {{ investigator.lastname }}
-  affiliation: {{ investigator.affiliation }}
+- firstname: {{ investigator.firstname | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
+  lastname: {{ investigator.lastname | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
+  affiliation: {{ investigator.affiliation | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
 {%- if investigator.country %}
-  country: {{ investigator.country }}
+  country: {{ investigator.country | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
 {%- endif %}
 {% endfor %}
 ---
