--- a/_layouts/pw39-project.html
+++ b/_layouts/pw39-project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-Back to <a href="../../#projects-how-to-add-a-new-project">Projects List</a>
+Back to <a href="../../Readme.html#projects">Projects List</a>
 
 <h1>{{ page.project_title }}</h1>
 
