Ensure all README.md are rendered as index.html & add redirects "from README.html"
Following the introduction of front matter (see below), README.md and
Readme.md documents started to be rendered as README.html and Readme.html.

See https://stackoverflow.com/questions/43889579/tell-jekyll-on-github-pages-to-convert-readme-md-to-readme-html-not-index-htm/47145320#47145320

For reference, commits introducing front matter are the following:
- cc42b868d (PW39_2023_Montreal: Improve project template)
- a2a236205 (PW39_2023_Montreal: Update "SlicerVRInteraction" to use front-matter & layout)
- 8244d4de4 (PW39_2023_Montreal: Auto-generate project listing)

To summarize, links used in PW39 are now consistent with all the other
events. For example, URLs like the following work:

  https://projectweek.na-mic.org/PW39_2023_Montreal/index.html
  https://projectweek.na-mic.org/PW39_2023_Montreal/
  https://projectweek.na-mic.org/PW39_2023_Montreal

  https://projectweek.na-mic.org/PW39_2023_Montreal/Projects/SlicerVRInteraction/index.html
  https://projectweek.na-mic.org/PW39_2023_Montreal/Projects/SlicerVRInteraction/
  https://projectweek.na-mic.org/PW39_2023_Montreal/Projects/SlicerVRInteraction

Additionally, redirect from README.html and Readme.html have been added.

For example, these links

  https://projectweek.na-mic.org/PW39_2023_Montreal/README.html
  https://projectweek.na-mic.org/PW39_2023_Montreal/Readme.html

redirects to

  https://projectweek.na-mic.org/PW39_2023_Montreal/

Note that the "Readme.html" redirect are added only for pages originally
named "Readme.md".

Lastly, the project template has also been updated to ensure new contributed
project render as "index.html"

--- a/PW39_2023_Montreal/Projects/Template/README.md.j2
+++ b/PW39_2023_Montreal/Projects/Template/README.md.j2
@@ -1,6 +1,8 @@
 ---
 layout: pw39-project
 
+permalink: /:path/
+
 project_title: {{ title | to_yaml | regex_replace("\n$|\n\.\.\.\n$", "") }}
 category: {{ category | regex_replace("\n$|\n\.\.\.\n$", "") }}
 
