Minor presenter location fixes

--- a/_layouts/pw39-project.html
+++ b/_layouts/pw39-project.html
@@ -16,7 +16,7 @@ Back to <a href="../../#projects">Projects List</a>
 {% endif %}
 </ul>
 
-<h2>Presenter location: {{page.presenter_location}}</h2>
+***Presenter location: {{page.presenter_location}}***
 
 {{ content }}
 
