Presetner location formatting

--- a/_layouts/pw39-project.html
+++ b/_layouts/pw39-project.html
@@ -16,7 +16,7 @@ Back to <a href="../../#projects">Projects List</a>
 {% endif %}
 </ul>
 
-***Presenter location: {{page.presenter_location}}***
+<i>Presenter location: {{page.presenter_location}}</i>
 
 {{ content }}
 
