--- a/PW40_2024_GranCanaria/Projects/Template/README.md.j2
+++ b/PW40_2024_GranCanaria/Projects/Template/README.md.j2
@@ -21,36 +21,4 @@ key_investigators:
 
 <!-- Add a short paragraph describing the project. -->
 
-{{ description }}
-
-## Objective
-
-<!-- Describe here WHAT you would like to achieve (what you will have as end result). -->
-
-{{ objective }}
-
-## Approach and Plan
-
-<!-- Describe here HOW you would like to achieve the objectives stated above. -->
-
-{{ approach }}
-
-## Progress and Next Steps
-
-<!-- Update this section as you make progress, describing of what you have ACTUALLY DONE.
-     If there are specific steps that you could not complete then you can describe them here, too. -->
-
-{{ progress }}
-
-# Illustrations
-
-<!-- Add pictures and links to videos that demonstrate what has been accomplished. -->
-
-{{ illustrations }}
-
-# Background and References
-
-<!-- If you developed any software, include link to the source code repository.
-     If possible, also add links to sample data, and to any relevant publications. -->
-
-{{ background }}
+{{ bulk }}
